fix(logo): re-explorts logo to only contain the logo and no whitespace

--- a/src/frontend/src/styles/main.css
+++ b/src/frontend/src/styles/main.css
@@ -347,9 +347,9 @@ hr {
 }
 
 #icLogo {
-  width: 80%;
+  width: 45%;
   align-self: center;
-  margin-top: -3rem;
+  margin: .5rem auto 3.25rem;
 }
 
 nav {
